@@ -1,8 +1,11 @@
 3.5.0
+  - New API
+    - SqlStatements.allowUnusedBindings allows you to bind Arguments to query parts that may be left out of the final query (e.g. by a TemplateEngine that renders conditional blocks) without getting an Exception.
   - Improvements
     - Skip unused string formatting for performance
     - Spring FactoryBean better singleton support
     - KotlinMapper respects constructor annotations, lateinit improvements
+    - behavioral fixes in Argument binding where the number of provided Arguments differs from the expected number.
 
 3.4.0
   - New API
